# EtherealReverbPlugin

./: CMakeLists.txt  PLAN.md  README.md  info.md  quickstart.md
Source/: DSPEngine.cpp  DSPEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tests/: AllPassBloomTiltTests.cpp  CircularBufferTests.cpp  FDNTests.cpp  GranularShimmerTests.cpp  PreDelayTests.cpp  ReverseReverbTests.cpp  SSBShimmerTests.cpp
releases/FL Studio (VST3)/Ethereal Reverb.vst3/Contents/: Info.plist
releases/FL Studio (VST3)/Ethereal Reverb.vst3/Contents/Resources/: moduleinfo.json
releases/FL Studio (VST3)/Ethereal Reverb.vst3/Contents/_CodeSignature/: CodeResources
releases/FL Studio (VST3)/Ethereal Reverb.vst3/Ethereal Reverb.vst3/Contents/: Info.plist
releases/FL Studio (VST3)/Ethereal Reverb.vst3/Ethereal Reverb.vst3/Contents/Resources/: moduleinfo.json
releases/FL Studio (VST3)/Ethereal Reverb.vst3/Ethereal Reverb.vst3/Contents/_CodeSignature/: CodeResources
releases/Logic Pro (AU)/Ethereal Reverb.component/Contents/: Info.plist
releases/Logic Pro (AU)/Ethereal Reverb.component/Ethereal Reverb.component/Contents/: Info.plist
